fixes misalignment of address in confirmed event

--- a/src/scss/components/_RSVP-area.scss
+++ b/src/scss/components/_RSVP-area.scss
@@ -31,37 +31,6 @@
     padding-left: 15px;
 }
 
-.confirm-event {
-    text-align: center;
-    border-radius: 50px;
-    color: white;
-    padding: 0.7em;
-    margin-bottom: 0.5em;
-
-    &.what {
-        background-color: $what;
-    }
-    &.where {
-        background-color: $where;
-    }
-    &.when {
-        background-color: $when;
-    }
-}
-
-.confirm-event-title {
-
-    &.what {
-        color: $what;
-    }
-    &.where {
-        color: $where;
-    }
-    &.when {
-        color: $when;
-    }
-}
-
 .rsvp-title {
     margin: 0.2em 0;
 }
